--- a/samples/react-usage-sample/src/index.html
+++ b/samples/react-usage-sample/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="./logo.svg" />
-    <title>react-rich-editor sample (in Bun + React)/title>
+    <title>react-rich-input sample (in Bun + React)/title>
   </head>
   <body>
     <div id="root"></div>
